Ajustes na documentacao da api
