# internal/handler/routes/docs_route.go
@@ -10,10 +10,11 @@ var (
 	docsURL = "http://localhost:8080/docs/doc.json"
 )
 
-// @title		API users
-// @version	1.0
-// @in			header
-// @name		Authorization
+//	@title						Api GO Back
+//	@version					1.0
+//	@securityDefinitions.apikey	ApiKeyAuth
+//	@in							header
+//	@name						Authorization
 func InitDocsRoutes(r chi.Router) {
 	r.Get("/docs/*", httpSwagger.Handler(httpSwagger.URL(docsURL),
 		httpSwagger.AfterScript(custom.CustomJS),
